--- a/Vision Core.css
+++ b/Vision Core.css
@@ -538,6 +538,15 @@ iframe.tumblr_audio_player {
 
 /* Post NPF media */
 
+article h3,
+article h4,
+article h5,
+article h6 {
+  font-size: 1rem;
+  font-weight: normal;
+  margin: 1rem 0;
+}
+
 article h2 {
   font-size: 1.25rem;
   font-weight: 400;
