remove bottom margin from fullwidth legacy photos
allows reblog trail to sit flush against them

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -453,6 +453,10 @@ article section.media {
   padding: 0 var(--post-padding);
 }
 
+article.photo section.media figure.tmblr-full {
+  margin-bottom: 0;
+}
+
 article.photo section.media img {
   margin: auto;
 }
