--- a/Vision Core.css
+++ b/Vision Core.css
@@ -163,16 +163,16 @@ aside > section {
   color: rgb(var(--accent));
   display: flex;
   flex-direction: row;
-  align-items: baseline;
+  align-items: center;
   height: 1rem;
   position: relative;
   z-index: 1;
-  margin: var(--sidebar-padding) 0;
-  padding: 0 var(--sidebar-padding);
+  padding: var(--sidebar-padding);
 }
 
 #search.overlaps-header {
   color: white;
+  background-image: linear-gradient(180deg, rgba(0,0,0,.3) 0, rgba(0,0,0,.3) 0, rgba(0,0,0,.3) 0, transparent);
 }
 
 #search:not(.search-enabled),
