--- a/Vision Core.css
+++ b/Vision Core.css
@@ -183,7 +183,7 @@ aside > section {
 
 #search.overlaps-header {
   color: white;
-  background-image: linear-gradient(180deg, rgba(0,0,0,.3) 0, rgba(0,0,0,.3) 0, rgba(0,0,0,.3) 0, transparent);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, .3) 0, rgba(0, 0, 0, .3) 0, rgba(0, 0, 0, .3) 0, transparent);
 }
 
 #search:not(.search-enabled),
