unfix NPF photoset heights (could cause issues)
instead, increase photoset item height to 1:1 from 4:3

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -659,6 +659,12 @@ body div.npf_row {
   margin-right: calc(0px - var(--post-padding));
 }
 
+.post-content div.npf_row .npf_col figure,
+.post div.npf_row .npf_col figure,
+body div.npf_row .npf_col figure {
+  padding-bottom: 100%;
+}
+
 .post-content div.npf_row .npf_col,
 .post-content div.npf_row figure.tmblr-full,
 .post div.npf_row .npf_col,
