--- a/Vision Core.css
+++ b/Vision Core.css
@@ -537,6 +537,9 @@ article.chat section.body {
 
 article.audio section.media,
 article.video section.media {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   padding: 0;
 }
 
