fix description-free link block hostname margin
fixes an issue where if a link block had a title but no description,
the hostname would be vertically spaced much more than it should be

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -754,8 +754,12 @@ figure.tmblr-full .tmblr-attribution {
   margin-top: 1rem;
 }
 
+.npf-link-block .bottom .description:not(:last-child) {
+  margin-bottom: .5rem;
+}
+
 .npf-link-block .bottom .site-name {
-  margin-top: .5rem;
+  margin-top: 0;
 
   color: rgba(var(--title), 0.65);
   font-size: .78125rem;
